# datafusion-dynamic-filter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
datafusion-dynamic-filter/: Cargo.toml
datafusion-dynamic-filter/benches/: dynamic_filter_benchmark.rs
datafusion-dynamic-filter/examples/: prepared_statements.rs
datafusion-dynamic-filter/src/: extendable_query_planner.rs  lib.rs  logical.rs  param_resolver.rs  parameterized_statement.rs  physical.rs  planner.rs  preparable_context.rs  rule.rs
datafusion-dynamic-filter/tests/: preparable_context_basic_test.rs  preparable_context_parquet_test.rs
