[workspace]
members = [".", "datafusion-dynamic-filter"]
resolver = "2"

[package]
name = "aimsir"
version = "0.1.0"
edition = "2021"

[lib]
name = "aimsir"
crate-type = ["cdylib", "rlib"]



[dependencies]
dashmap = "5.5"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
rocksdb = "0.21"
half = { version = "2.6", features = ["serde"] }
datafusion = { version = "50.2.0", features = ["serde"] }
datafusion-physical-expr = "50.2.0"
datafusion-proto = "50.2.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rand = "0.8"
snmalloc-rs = "0.3"
pyo3 = { version = "0.25", features = ["extension-module", "abi3", "abi3-py311"], optional = true }
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"], optional = true }
arrow = { version = "56.2", features = ["ffi"], optional = true }
pyo3-arrow = { version = "0.11", optional = true }
datafusion-dynamic-filter = { path = "datafusion-dynamic-filter" }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.9"

[features]
default = ["temporal-query"]
python = ["pyo3", "pyo3-async-runtimes", "arrow", "pyo3-arrow"]
jemalloc-bench = []
temporal-query = []
list-datatype = []

[profile.bench]
debug = true

[profile.release]
debug = true

[[bench]]
name = "point_vs_range_tree"
harness = false

# Build configuration moved to .cargo/config.toml for better sccache compatibility
# Uncomment the following if you need address sanitizer for debugging:
# [build]
# rustflags = ["-C", "force-frame-pointers=yes","-C", "symbol-mangling-version=v0", "-Z", "sanitize=address"]
